// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section Component Section renders 1`] = `
<div>
  <div
    class="gds-layout-section-container"
  >
    <div
      class="section-header collapsable"
      data-testid="DATA-TEST-ID"
    >
      <h2
        class="gds-typography"
      >
        TITLE
      </h2>
      <i
        class="collapse-icon open icon"
        icon="fal,chevron-left"
      />
    </div>
    <div
      aria-hidden="false"
      class="section-body"
      id="react-collapsed-panel-1"
      style="box-sizing: border-box; display: none; height: 0px; overflow: hidden;"
    >
      <div
        id="CHILD1"
      />
      <div
        id="CHILD2"
      />
    </div>
    <div
      class="section-footer"
    />
  </div>
</div>
`;

exports[`Section Component Section renders 2`] = `
<div>
  <div
    class="gds-layout-section-container"
  >
    <div
      class="section-header collapsable"
      data-testid="DATA-TEST-ID"
    >
      <h2
        class="gds-typography"
      >
        TITLE
      </h2>
      <i
        class="collapse-icon icon"
        icon="fal,chevron-left"
      />
    </div>
    <div
      aria-hidden="true"
      class="section-body"
      id="react-collapsed-panel-1"
      style="box-sizing: border-box; display: none; height: 0px; overflow: hidden;"
    >
      <div
        id="CHILD1"
      />
      <div
        id="CHILD2"
      />
    </div>
    <div
      class="section-footer"
    />
  </div>
</div>
`;

exports[`Section Component Section renders 3`] = `
<div>
  <div
    class="gds-layout-section-container"
  >
    <div
      class="section-header collapsable"
      data-testid="DATA-TEST-ID"
    >
      <h2
        class="gds-typography"
      >
        TITLE
      </h2>
      <i
        class="collapse-icon open icon"
        icon="fal,chevron-left"
      />
    </div>
    <div
      aria-hidden="false"
      class="section-body"
      id="react-collapsed-panel-1"
      style="box-sizing: border-box; display: none; height: 0px; overflow: hidden;"
    >
      <div
        id="CHILD1"
      />
      <div
        id="CHILD2"
      />
    </div>
    <div
      class="section-footer"
    />
  </div>
</div>
`;

exports[`Section Component Section renders collapsable closed by default 1`] = `
<div>
  <div
    class="gds-layout-section-container"
  >
    <div
      class="section-header collapsable"
      data-testid="DATA-TEST-ID"
    >
      <h2
        class="gds-typography"
      >
        TITLE
      </h2>
      <i
        class="collapse-icon icon"
        icon="fal,chevron-left"
      />
    </div>
    <div
      aria-hidden="true"
      class="section-body"
      id="react-collapsed-panel-5"
      style="box-sizing: border-box; display: none; height: 0px; overflow: hidden;"
    >
      <div
        id="CHILD1"
      />
      <div
        id="CHILD2"
      />
    </div>
    <div
      class="section-footer"
    />
  </div>
</div>
`;

exports[`Section Component Section renders not collapsable 1`] = `
<div>
  <div
    class="gds-layout-section-container"
  >
    <div
      class="section-header"
      data-testid="DATA-TEST-ID"
    >
      <h2
        class="gds-typography"
      >
        TITLE
      </h2>
    </div>
    <div
      aria-hidden="false"
      class="section-body"
      id="react-collapsed-panel-6"
      style="box-sizing: border-box; display: none; height: 0px; overflow: hidden;"
    >
      <div
        id="CHILD1"
      />
      <div
        id="CHILD2"
      />
    </div>
    <div
      class="section-footer"
    />
  </div>
</div>
`;

exports[`Section Component Section renders not collapsable 2`] = `
<div>
  <div
    class="gds-layout-section-container"
  >
    <div
      class="section-header"
      data-testid="DATA-TEST-ID"
    >
      <h2
        class="gds-typography"
      >
        TITLE
      </h2>
    </div>
    <div
      aria-hidden="true"
      class="section-body"
      id="react-collapsed-panel-6"
      style="box-sizing: border-box; display: none; height: 0px; overflow: hidden;"
    >
      <div
        id="CHILD1"
      />
      <div
        id="CHILD2"
      />
    </div>
    <div
      class="section-footer"
    />
  </div>
</div>
`;

exports[`Section Component Section renders not collapsable 3`] = `
<div>
  <div
    class="gds-layout-section-container"
  >
    <div
      class="section-header"
      data-testid="DATA-TEST-ID"
    >
      <h2
        class="gds-typography"
      >
        TITLE
      </h2>
    </div>
    <div
      aria-hidden="false"
      class="section-body"
      id="react-collapsed-panel-9"
      style="box-sizing: border-box; display: none; height: 0px; overflow: hidden;"
    >
      <div
        id="CHILD1"
      />
      <div
        id="CHILD2"
      />
    </div>
    <div
      class="section-footer"
    />
  </div>
</div>
`;
